--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,9 +7,11 @@
 
     <!-- Put all STUFF in here -->
     <div class="content">
-      <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p>    <p> text text</p> 
+      <h2 class="indexheadfont">Bringing genuine authentic Indonesian cuisine to Los Angeles!</h2>
+      <p class="indexfont">On Thursdays, deliveries to West Hollywood blah blah blah</p>
+      <p class="indexfont">On Fridays, deliveries to Pasadena, Asian town, I smell really good blah blah blah</p>
     
-    
+      <p class="indexfont">Here are just a few of our signature dishes...</p>
     
     </div>
     <!-- End of stuff  -->
