--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -16,7 +16,7 @@
         <li class="navbar" ><a href="#foot" >Contact</a></li>
         <li class="navbar" ><a href="/about.html" >About</a></li>
         <li class="navbar" ><a href="{% url 'order' %}" >Order</a></li>
-        <li class="navbar" ><a href="/menu.html" >Menu</a></li>
+        <li class="navbar" ><a href="{% url 'menu' %}" >Menu</a></li>
         <li class="navbar" ><a href="/" >Home</a></li>
       </ul>
     </div>
