--- a/main/templates/main/menu.html
+++ b/main/templates/main/menu.html
@@ -6,7 +6,21 @@
 
   <!-- Put all STUFF in here -->
   <div class="content">
-    <h3>Selections for the week of October 11th-October 16th</h3>
+    <br><br>
+    <h3>Special Selections for the week of October 11th-October 16th</h3>
+
+
+    <!-- Special items at the top -->
+    <div id="item1">
+      <!-- Put image on left side, then put text next to it -->
+    </div>
+
+    <div id="item2">
+      <!-- Put image on right side, then put text next to it -->
+    </div>
+
+
+    <!-- Rest of the items at the bottom -->
 
 
   
