Add styles and pictures to the website

--- a/main/templates/main/menu.html
+++ b/main/templates/main/menu.html
@@ -13,6 +13,13 @@
     <!-- Special items at the top -->
     <div id="item1">
       <!-- Put image on left side, then put text next to it -->
+      <img id="image1" src="{% static 'main/sampzoom.jpg' %}" width="100px">
+      <button type="button" onclick="zoomin()">
+        Zoomin
+      </button>
+      <button type="button" onclick="zoomout()">
+        Zoomout
+      </button>
     </div>
 
     <div id="item2">
