--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -7,6 +7,8 @@
     <title>LA Indonesian</title>
     <link rel="stylesheet" href="{% static 'main/styles.css' %}">
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <script src="{% static 'main/javascript.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   </head>
 
   <body>
