Attempting to get heroku working for app

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -9,8 +9,8 @@
     <div class="content">
       <h2 class="indexheadfont">Bringing genuine authentic Indonesian cuisine to Los Angeles!</h2>
       <p class="indexfont">On Thursdays, deliveries to West Hollywood blah blah blah</p>
-      <p class="indexfont">On Fridays, deliveries to Pasadena, Asian town, I smell really good blah blah blah</p>
-    
+      <p class="indexfont">On Fridays, deliveries to Pasadena, etc. etc.</p>
+    <p></p>
       <p class="indexfont">Here are just a few of our signature dishes...</p>
     
     </div>
