--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -16,7 +16,7 @@
     <div id="topbar">
       <ul>
         <li class="navbar" ><a href="#foot" >Contact</a></li>
-        <li class="navbar" ><a href="/about.html" >About</a></li>
+        <li class="navbar" ><a href="{% url 'about' %}" >About</a></li>
         <li class="navbar" ><a href="{% url 'order' %}" >Order</a></li>
         <li class="navbar" ><a href="{% url 'menu' %}" >Menu</a></li>
         <li class="navbar" ><a href="/" >Home</a></li>
