Added to the Menu page, cut up a bunch of colorful pictures. Added the 'about' page as well as a picture bar for that.

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block body %}
-    <img id="splashpic" src="{% static 'main/splash.jpg' %}" alt="Indonesian Food Picture">
+    <img id="splashpic" src="{% static 'main/samplefoodbar2.png' %}" alt="Indonesian Food Picture">
 
     <!-- Put all STUFF in here -->
     <div class="content">
