--- a/main/templates/main/menu.html
+++ b/main/templates/main/menu.html
@@ -25,7 +25,7 @@
     <div id="week1">
       <!-- Put image on left side, then put text next to it -->
       <div>
-        <img class="menuweekimage" id="week1food" src="{% static 'main/stockfood1.png' %}" width="500px">
+        <img class="menuweekimage" id="week1food" src="{% static 'main/stockfood1.png' %}">
       </div>
       <div class="menudescriptions">
         <p>🍚 Nasi Kuning (Turmeric Rice) - Rice cooked with turmeric and coconut milk</p>
@@ -36,8 +36,8 @@
     </div>
 
     <br><hr><hr><hr><br>
-
-    <div id="week2">
+    
+    <div id="week2widescreen">
       <!-- Put image on right side, then put text next to it -->
       <div class="menudescriptions">
         <p> 🍚 Nasi Uduk (Coconut Rice) - Indonesian Style Coconut Rice Topped with Sliced Omelette</p>
@@ -50,15 +50,33 @@
           🌱 Vegan Options: Veggie Spring Rolls</p>
       </div>
       <div>
-        <img class="menuweekimage" id="week2food" src="{% static 'main/stockfood2.png' %}" width="500px">
+        <img class="menuweekimage" id="week2food" src="{% static 'main/stockfood2.png' %}">
+      </div>
+    </div>
+
+    <div id="week2mobilescreen">
+      <!-- Put image on right side, then put text next to it -->
+      <div>
+        <img class="menuweekimage" id="week2food" src="{% static 'main/stockfood2.png' %}">
+      </div>
+      <div class="menudescriptions">
+        <p> 🍚 Nasi Uduk (Coconut Rice) - Indonesian Style Coconut Rice Topped with Sliced Omelette</p>
+        <p> 🐓 Ayam Rica Rica (Shredded Chicken Breast with Chili Sauce) - <br>
+          Chicken-Red chilies-lemongrass-kaffir lime leaves-lime juice-basil
+          (🌱 Vegan Option Available with Substitution of Chicken with Soy Based Protein and Tofu)</p>
+        <p> 🍝 Mie Goreng Jawa - Indonesian Style Stir-Fried Noodles <br>
+          (🌱 Vegan Option will be made with Rice Noodles)</p>
+        <p> 🐷 Deep Fried Pork and Shrimp Shu mai (2Pieces) <br>
+          🌱 Vegan Options: Veggie Spring Rolls</p>
       </div>
     </div>
 
     <br><hr><hr><hr><br>
 
     <div id="week3">
+      <!-- Image back on the left side again -->
       <div>
-        <img class="menuweekimage" id="week3food" src="{% static 'main/stockfood3.png' %}" width="500px">
+        <img class="menuweekimage" id="week3food" src="{% static 'main/stockfood3.png' %}">
       </div>
       <div class="menudescriptions">
         <p>🍚 Nasi Hainam (Hainanese Rice) - Garnished with cucumber</p>
