--- a/main/static/main/styles.css
+++ b/main/static/main/styles.css
@@ -166,7 +166,6 @@ body {
     /*Displaying the pictures on the menu page, NEED RWD? */
   #week1 {
     width: 100%;
-    padding: 15px;
     display: inline-flex;
     float: left;
     align-items: center;
@@ -198,6 +197,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5em;
     color: rgb(107, 37, 37);
+    margin: 19px;
   }
 
   .menuweekimage {
