--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -30,19 +30,21 @@
     <div id="foot">
       <div id="leftfoot">
         <h3 class="footfont">Want to get in touch? DM us on social media!</h3>
-        <p class="footfont"> Instagram </p>
-        <p class="footfont"> Facebook </p>
+        <p class="footfonttxt">Don't hesitate to ask anything! We usually respond immediately!</p>
+        <p class="footfonttxt"><a target="_blank" href="http://www.instagram.com/tonifabulouskitchen"><img class="sociallogo" src="{% static 'main/insta.svg' %}"></a> Instagram </p>
+        <p class="footfonttxt"><a target="_blank" href="http://www.instagram.com/tonifabulouskitchen"><img class="sociallogo" src="{% static 'main/fbma.png' %}"></a> Facebook </p>
       </div>
       <div id="centerfoot">
         <h3 class="footfont">Tentative Schedule: </h3>
-        <p class="footfont">Place orders: Sunday/Monday</p>
-        <p class="footfont">Delivery: Thursday/Friday!</p>
-        <p class="footfont"></p>
+        <p class="footfonttxt"><strong>Place orders:</strong> Sunday/Monday</p>
+        <p class="footfonttxt"><strong>Delivery Days:</strong> Thursday/Friday!</p>
+        <p class="footfonttxt">Contact us for custom options!</p>
+        <p class="footfonttxt"></p>
       </div>
       <div id="rightfoot">
         <h3 class="footfont">Some extra information!</h3>
-        <p class="footfont">Here is some extra stuff</p>
-        <p class="footfont">Blah blah blah</p>
+        <p class="footfonttxt">Here is some extra room for more general information</p>
+        <p class="footfonttxt">:)</p>
       </div>
     </div>
 
