--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -12,7 +12,7 @@
       <p class="indexfont">As native Indonesians who grew up with a great appreciation for the cuisine
         of our culture, we developed a passion for cooking years ago. It was not until recently that we had
         the opportunity to truly explore what it would be like to cook and prepare this food and share it 
-        with those who are closed to us. Over time, word of mouth spread, and we upgraded our small 
+        with those who are close to us. Over time, word of mouth spread, and we upgraded our small 
         business so that we could provide more orders to those who wish to enjoy the wonderful
         cuisine of South Asia!
       </p>
