--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,12 +7,21 @@
 
     <!-- Put all STUFF in here -->
     <div class="content">
-      <h2 class="indexheadfont">Bringing genuine authentic Indonesian cuisine to Los Angeles!</h2>
-      <p class="indexfont">On Thursdays, deliveries to West Hollywood blah blah blah</p>
-      <p class="indexfont">On Fridays, deliveries to Pasadena, etc. etc.</p>
-    <p></p>
+      <h2 class="indexheadfont">Bringing genuine and authentic Indonesian cuisine to the Los Angeles area!</h2>
+      
+      <h2 class="indexheadfont">How do we operate?</h2>
+      <p class="indexfont">At the moment, since there is only two of us, we conduct a rather small operation. We spend the day on Saturday planning the weekly meal,
+        then spend Sunday and Monday collecting orders after it has been established. For the rest of the week, we are shopping,
+        preparing, cooking, and driving all over Southern California to bring you great food <i>directly</i> to your front door!
+        <br><br>
+        Due to the sheer volume of orders that we have been fortunate enough to receive, we usually split our delivery system over two days. 
+        On Thursdays, deliveries go out to the more local (for us) regions of West Hollywood, Koreatown, Santa Monica and Inglewood. On Fridays, 
+        we usually go to generally more distant locations, such as Pasadena, Compton and Long Beach. Of course, we can make custom delivery options for large
+        volume catering orders or other special conditions! Please just reach out to us on Social Media first! Links are at the bottom of the page!
+      </p>
+
       <p class="indexfont">Here are just a few of our signature dishes...</p>
-    
+      <img id="foodbarsplash" style="width: 100%;" src="{% static 'main/samplefoodbar.png' %}" alt="Some signature dishes displayed">
     </div>
     <!-- End of stuff  -->
 {% endblock %}
