--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -31,8 +31,8 @@
       <div id="leftfoot">
         <h3 class="footfont">Want to get in touch? DM us on social media!</h3>
         <p class="footfonttxt">Don't hesitate to ask anything! We usually respond immediately!</p>
-        <p class="footfonttxt"><a target="_blank" href="http://www.instagram.com/tonifabulouskitchen"><img class="sociallogo" src="{% static 'main/insta.svg' %}"></a> Instagram </p>
-        <p class="footfonttxt"><a target="_blank" href="http://www.instagram.com/tonifabulouskitchen"><img class="sociallogo" src="{% static 'main/fbma.png' %}"></a> Facebook </p>
+        <p class="footfonttxt"><a target="_blank" href="http://www.instagram.com/tonifabulouskitchen"><img class="sociallogo" src="{% static 'main/insta.svg' %}"></a></p>
+        <p class="footfonttxt"><a target="_blank" href="http://www.instagram.com/tonifabulouskitchen"><img class="sociallogo" src="{% static 'main/fbma.png' %}"></a></p>
       </div>
       <div id="centerfoot">
         <h3 class="footfont">Tentative Schedule: </h3>
