--- a/main/static/main/styles.css
+++ b/main/static/main/styles.css
@@ -128,6 +128,18 @@ body {
     width: 100%;
   }
 
+  /* About page */
+  .desktopsplash {
+    display: none;
+  }
+
+  /* About page */
+  #splashabout {
+    width: 100%;
+    margin: 0px;
+    top: 0px;  
+  }
+
     /* Footer bar  */
   #foot {
     flex-shrink: 0;
@@ -221,6 +233,19 @@ body {
   .orderpics {
     width: 49.5%;
   }
+
+  /* About page */
+  #splashabout {
+    width: 100%;
+    margin: 0px;
+    top: 0px;  
+  }
+
+  .mobilesplash {
+    display: none;
+  }
+
+
   /* Index Page  */
   #splashpic {
     width: 100%;
@@ -269,6 +294,9 @@ body {
   .menuweekimage {
     width: 550px;
   }
+
+
+
 
     /* Footer bar  */
   #foot {
