--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -4,7 +4,7 @@
 
 <html lang="en">
   <head>
-    <title>LA Indonesian</title>
+    <title>Toni's Authentic Indo</title>
     <link rel="stylesheet" href="{% static 'main/styles.css' %}">
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <script src="{% static 'main/javascript.js' %}"></script>
