Fixed the footer bar on the bottom to make more formal

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -37,14 +37,15 @@
       <div id="centerfoot">
         <h3 class="footfont">Tentative Schedule: </h3>
         <p class="footfonttxt"><strong>Place orders:</strong> Sunday/Monday</p>
+        <p class="footfonttxt"><strong>Shopping and Prep:</strong> Tuesday/Wednesday</p>
         <p class="footfonttxt"><strong>Delivery Days:</strong> Thursday/Friday!</p>
-        <p class="footfonttxt">Contact us for custom options!</p>
+
         <p class="footfonttxt"></p>
       </div>
       <div id="rightfoot">
-        <h3 class="footfont">Some extra information!</h3>
-        <p class="footfonttxt">Here is some extra room for more general information</p>
-        <p class="footfonttxt">:)</p>
+        <h3 class="footfont">We do custom orders!</h3>
+        <p class="footfonttxt">Need a large party catered? Go to our Catering Options page!</p>
+        <p class="footfonttxt"></p>
       </div>
     </div>
 
