--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -32,7 +32,7 @@
         <h3 class="footfont">Want to get in touch? DM us on social media!</h3>
         <p class="footfonttxt">Don't hesitate to ask anything! We usually respond immediately!</p>
         <p class="footfonttxt"><a target="_blank" href="http://www.instagram.com/tonifabulouskitchen"><img class="sociallogo" src="{% static 'main/insta.svg' %}"></a>
-          <span></span>
+          <span>&nbsp; &nbsp;</span>
           <a target="_blank" href="https://www.facebook.com/tonifabulouskitchen/"><img class="sociallogo" src="{% static 'main/fbma.png' %}"></a></p>
       </div>
       <div id="centerfoot">
