Fixed a grammar error on homepage

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -11,7 +11,7 @@
       <h2 class="indexheadfont">Bringing genuine and authentic Indonesian cuisine to the Los Angeles area!</h2>
       
       <h2 class="indexheadfont">How do we operate?</h2>
-      <p class="indexfont">At the moment, since there is only two of us, we conduct a rather small operation. We spend the day on Saturday planning the weekly meal,
+      <p class="indexfont">At the moment, since there are only two of us, we conduct a rather small operation. We spend the day on Saturday planning the weekly meal,
         then spend Sunday and Monday collecting orders after it has been established. For the rest of the week, we are shopping,
         preparing, cooking, and driving all over Southern California to bring you great food <i>directly</i> to your front door!
         <br><br>
