Updated details on the homepage

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -8,7 +8,7 @@
     <!-- Put all STUFF in here -->
     <div class="content">
       <br>
-      <h2 class="indexheadfont">Bringing genuine and authentic Indonesian cuisine to the Los Angeles area!</h2>
+      <h2 class="indexheadfont">Bringing genuine and authentic Indonesian and South-East Asian cuisine to the Los Angeles area!</h2>
       
       <h2 class="indexheadfont">How do we operate?</h2>
       <p class="indexfont">At the moment, since there are only two of us, we conduct a rather small operation. We spend the day on Saturday planning the weekly meal,
